--- a/www/display.html
+++ b/www/display.html
@@ -3,15 +3,15 @@
 <HTML>
 <HEAD>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <title>display: Open ImageMagick - Image Processing and Display Package</title>
-   <meta name="description" content="Open ImageMagick is a robust collection of
+   <title>display: GraphicsMagick - Image Processing and Display Package</title>
+   <meta name="description" content="GraphicsMagick is a robust collection of
    tools and libraries to read, write, and manipulate an image in any of the
    more popular image formats including GIF, JPEG, PNG, PDF, and Photo CD.
-   With Open ImageMagick you can create GIFs dynamically making it suitable for
+   With GraphicsMagick you can create GIFs dynamically making it suitable for
    Web applications.  You can also resize, rotate, sharpen, color reduce, or
    add special effects to an image and save your completed work in the same
    or  differing image format.">
-   <meta name="keywords" content="conjure, Open ImageMagick, Image Magick, Image Magic,
+   <meta name="keywords" content="conjure, GraphicsMagick, Image Magick, Image Magic,
    PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic,
    WebMagick, Web Magic, visualization, image processing, software development,
    simulation, image, software, AniMagick, Animagic, Magick++">
@@ -296,7 +296,7 @@ file. See <em>X(1)</em>. Options on the command line supersede values specified
 in your X resources file.
 <p>
 For a more detailed description of each option, see
-<a href="ImageMagick.html"><em>Open ImageMagick(1)</em></a>.
+<a href="ImageMagick.html"><em>GraphicsMagick(1)</em></a>.
 <br>&nbsp;<br>
 <table BORDER=0 WIDTH="94%">
 <tr>
@@ -1079,7 +1079,7 @@ width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
     <a href="ImageMagick.html#details-version">-version</a>
 </font></font></font></b></td></tr></table>
-<table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>print Open ImageMagick version string</td></tr></table>
+<table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>print GraphicsMagick version string</td></tr></table>
 <table BORDER=0 WIDTH="94%">
 <tr>
 <td width="3%"><br></td> 
@@ -1126,7 +1126,7 @@ width=15><b><font face="Helvetica, Arial"
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>write the image to a file [<em>display</em>]</td></tr></table>
 <p>
 For a more detailed description of each option, see
-<a href="ImageMagick.html"><em>Open ImageMagick(1)</em></a>.
+<a href="ImageMagick.html"><em>GraphicsMagick(1)</em></a>.
 <br>&nbsp;<br>
 </td></tr></table>
      <p>
@@ -1494,7 +1494,7 @@ For example to display the fourth page preceding the current page, press
              or f/x.
     F1       Press to display helpful information about
              the "display" utility.
-    Find     Press to browse documentation about Open ImageMagick.
+    Find     Press to browse documentation about GraphicsMagick.
     1-9      Press to change the level of magnification.
 </pre>
 <p>
@@ -1576,7 +1576,7 @@ width=15><b><font face="Helvetica, Arial"
     browseCommand <i>(class browseCommand)</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>
-Specifies the name of the preferred browser when displaying Open ImageMagick
+Specifies the name of the preferred browser when displaying GraphicsMagick
 documentation. The default is <tt>netscape %s</tt>.</td></tr></table>
 <table BORDER=0 WIDTH="94%">
 <tr>
@@ -1811,7 +1811,7 @@ width=15><b><font face="Helvetica, Arial"
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>
 This resource specifies whether display should attempt use shared memory
-for pixmaps. Open ImageMagick must be compiled with shared memory support, and
+for pixmaps. GraphicsMagick must be compiled with shared memory support, and
 the display must support the MIT-SHM extension. Otherwise, this resource
 is ignored. The default is True.</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -3658,7 +3658,7 @@ The <strong>MIT X Consortium</strong> for making network transparent graphics a
 reality.
 <p>
 <em>Peder Langlo</em>, <strong>Hewlett Packard</strong>, Norway, made hundreds of suggestions
-and bug reports. Without Peder, <strong>Open ImageMagick</strong> would not be nearly
+and bug reports. Without Peder, <strong>GraphicsMagick</strong> would not be nearly
 as useful as it is today.
 <p>
 <em>Rod Bogart</em> and <em>John W. Peterson</em>, <strong>University of Utah</strong>.
@@ -3667,7 +3667,7 @@ Image compositing is loosely based on rlecomp of the Utah Raster Toolkit.
 <em>Michael Halle</em>, <strong>Spatial Imaging Group at MIT</strong>, for the initial
 implementation of Alan Paeth's image rotation algorithm.
 <p>
-<em>David Pensak</em>, <strong>Open ImageMagick Studio</strong>, for providing a computing
+<em>David Pensak</em>, <strong>GraphicsMagick Group</strong>, for providing a computing
 environment that made this program possible.
 <p>
 <em>Paul Raveling</em>, <strong>USC Information Sciences Institute</strong>. The
@@ -3690,10 +3690,10 @@ color="#FFFFFF"><font size="+1">
 <em>
 John Cristy,
 <a href="mailto:magick-users@imagemagick.org">magick-users@imagemagick.org</a>,
-Open ImageMagick Studio LLC,<br>
+GraphicsMagick Group LLC,<br>
 Glenn Randers-Pehrson,
 <a href="mailto:randeg@alum.rpi.edu">randeg@alum.rpi.edu</a>,
-Open ImageMagick Studio LLC.
+GraphicsMagick Group LLC.
 </em>
 <br>&nbsp;<br>
 </td></tr></table>
@@ -3711,40 +3711,40 @@ color="#FFFFFF"><font size="+1">
 <table width="94%" border="0" cellspacing="0" cellpadding="8">
 <tr><td width="3%"><br></td><td>
 <p>
-<strong>Copyright (C) 2002 Open ImageMagick Studio</strong>
+<strong>Copyright (C) 2002 GraphicsMagick Group</strong>
 <p>
 <strong>Permission is hereby granted, free of charge, to any person obtaining
-a copy of this software and associated documentation files ("Open ImageMagick"),
-to deal in Open ImageMagick without restriction, including without limitation
+a copy of this software and associated documentation files ("GraphicsMagick"),
+to deal in GraphicsMagick without restriction, including without limitation
 the rights to use, copy, modify, merge, publish, distribute, sublicense,
-and/or sell copies of Open ImageMagick, and to permit persons to whom the Open ImageMagick
+and/or sell copies of GraphicsMagick, and to permit persons to whom the GraphicsMagick
 is furnished to do so, subject to the following conditions:</strong>
 <p>
 <strong>The above copyright notice and this permission notice shall be included
-in all copies or substantial portions of Open ImageMagick.</strong>
+in all copies or substantial portions of GraphicsMagick.</strong>
 <p>
 <strong>The software is provided "as is", without warranty of any kind, express
 or implied, including but not limited to the warranties of merchantability,
 fitness for a particular purpose and noninfringement.In no event shall
-Open ImageMagick Studio be liable for any claim, damages or other liability,
+GraphicsMagick Group be liable for any claim, damages or other liability,
 whether in an action of contract, tort or otherwise, arising from, out
-of or in connection with Open ImageMagick or the use or other dealings in
-Open ImageMagick.</strong>
+of or in connection with GraphicsMagick or the use or other dealings in
+GraphicsMagick.</strong>
 <p>
 <strong>Except as contained in this notice, the name of the
-Open ImageMagick Studio LLC shall not be used in advertising or otherwise to
-promote the sale, use or other dealings in Open ImageMagick without prior written
-authorization from the Open ImageMagick Studio.</strong>
+GraphicsMagick Group LLC shall not be used in advertising or otherwise to
+promote the sale, use or other dealings in GraphicsMagick without prior written
+authorization from the GraphicsMagick Group.</strong>
 </td></tr></table>
      <p>
 <i><a href="#top">Back to Contents</a></i> 
 &nbsp;</p>
 <hr>
 <p><a href="../ImageMagick.html"><img SRC="../images/home.png"
-ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
+ALT="GraphicsMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><a 
 href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
-ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
+ALT="GraphicsMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><font size="-2">
 Image manipulation software that works like magic.</font>
 </body></html>
