--- a/www/api.html
+++ b/www/api.html
@@ -3,9 +3,9 @@
 <HTML>
 <HEAD>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <title>C API: Open ImageMagick - Image Processing and Display Package</title>
-   <meta name="description" content="Open ImageMagick is a    robust collection of tools and libraries to read, write, and manipulate    an image in any of the more popular image formats including GIF, JPEG,    PNG, PDF, and Photo CD.  With Open ImageMagick you can create GIFs dynamically    making it suitable for Web applications.  You can also resize, rotate,    sharpen, color reduce, or add special effects to an image and save your    completed work in the same or  differing image format.">
-   <meta name="keywords" content="Open ImageMagick, Image Magick, Image Magic,    PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic,    WebMagick, Web Magic, visualization, image processing, software     development, simulation, image, software, AniMagick, Animagic,    Magick++">
+   <title>C API: GraphicsMagick - Image Processing and Display Package</title>
+   <meta name="description" content="GraphicsMagick is a    robust collection of tools and libraries to read, write, and manipulate    an image in any of the more popular image formats including GIF, JPEG,    PNG, PDF, and Photo CD.  With GraphicsMagick you can create GIFs dynamically    making it suitable for Web applications.  You can also resize, rotate,    sharpen, color reduce, or add special effects to an image and save your    completed work in the same or  differing image format.">
+   <meta name="keywords" content="GraphicsMagick, Image Magick, Image Magic,    PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic,    WebMagick, Web Magic, visualization, image processing, software     development, simulation, image, software, AniMagick, Animagic,    Magick++">
    <link rel="StyleSheet" href="magick.css" type="text/css">
 </head>
 <body bgcolor="#FFFFFF" text="#000000" link="#0085c0" vlink="#800080" alink="#0085c0" >
@@ -17,7 +17,7 @@
 
 <p><br>
 <br>
-<p><b>Open ImageMagick</b> has a number of functions that allow you to read,
+<p><b>GraphicsMagick</b> has a number of functions that allow you to read,
 manipulate, write, or display an image. These functions are accessible
 through the various <a href="tools.html">tools</a> or the object-oriented
 Perl interface, <a href="perl.html">PerlMagick</a>. However, you can also
@@ -29,15 +29,15 @@ depending on your system.
 <p>The API is divided into a number of categories:
 <dl>
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/constitute.html">Open ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/constitute.html">GraphicsMagick
 Methods to Constitute an Image</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/composite.html">Open ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/composite.html">GraphicsMagick
 Methods to Composite an Image</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/image.html">Open ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/image.html">GraphicsMagick
 Image Methods</a></dd>
 
 <dd>
@@ -69,15 +69,15 @@ to Shear or Rotate an Image by an Arbitrary Angle</a></dd>
 to Enhance an Image</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/effect.html">Open ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/effect.html">GraphicsMagick
 Image Effects Methods</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/fx.html">Open ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/fx.html">GraphicsMagick
 Special Effects Methods</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/decorate.html">Open ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/decorate.html">GraphicsMagick
 Image Decoration Methods</a></dd>
 
 <dd>
@@ -101,7 +101,7 @@ to Draw on an Image</a></dd>
 <img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/draw.html">Image Vector Drawing Methods </a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/montage.html">Open ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/montage.html">GraphicsMagick
 Methods to Create Image Thumbnails</a></dd>
 
 <dd>
@@ -121,7 +121,7 @@ to Get or Set Image Pixels</a></dd>
 with Image Lists</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/cache_view.html">Open ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/cache_view.html">GraphicsMagick
 Cache Views Methods</a></dd>
 
 <dd>
@@ -134,34 +134,34 @@ to Read or Write Binary Large OBjects</a></dd>
 
 <dd>
 <img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/magick.html">Methods
-to Read or List Open ImageMagick Image formats</a></dd>
+to Read or List GraphicsMagick Image formats</a></dd>
 
 <dd>
 <img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/signature.html">Methods
 to Compute a Message Digest for an Image</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/registry.html">Open ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/registry.html">GraphicsMagick
 Registry Methods</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/error.html">Open ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/error.html">GraphicsMagick
 Error Methods</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/memory.html">Open ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/memory.html">GraphicsMagick
 Memory Allocation Methods</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/resource.html">Open ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/resource.html">GraphicsMagick
 Resource Consumption Methods</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/monitor.html">Open ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/monitor.html">GraphicsMagick
 Progress Monitor Methods</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/deprecate.html">Open ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/deprecate.html">GraphicsMagick
 Deprecated Methods</a></dd>
 </dl>
 <p>
@@ -244,10 +244,10 @@ For C++, use:
 <pre>&nbsp;&nbsp;&nbsp; g++ `Magick++-config --cxxflags --cppflags` demo.cpp `Magick++-config --ldflags --libs`</pre>
 <hr>
 <p><a href="../ImageMagick.html"><img SRC="../images/home.png"
-ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
+ALT="GraphicsMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><a 
 href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
-ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
+ALT="GraphicsMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><font size="-2">
 Image manipulation software that works like magic.</font>
 </body>
