--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -3,9 +3,9 @@
 <HTML>
 <HEAD>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <title>Open ImageMagick - Be A Sponsor</title>
-   <meta name="description" content="Open ImageMagick is a    robust collection of tools and libraries to read, write, and manipulate    an image in any of the more popular image formats including GIF, JPEG,    PNG, PDF, and Photo CD.  With Open ImageMagick you can create GIFs dynamically    making it suitable for Web applications.  You can also resize, rotate,    sharpen, color reduce, or add special effects to an image and save your    completed work in the same or  differing image format.">
-   <meta name="keywords" content="Open ImageMagick, Image Magick, Image Magic,    PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic,    WebMagick, Web Magic, visualization, image processing, software     development, simulation, image, software, AniMagick, Animagic,    Magick++">
+   <title>GraphicsMagick - Be A Sponsor</title>
+   <meta name="description" content="GraphicsMagick is a    robust collection of tools and libraries to read, write, and manipulate    an image in any of the more popular image formats including GIF, JPEG,    PNG, PDF, and Photo CD.  With GraphicsMagick you can create GIFs dynamically    making it suitable for Web applications.  You can also resize, rotate,    sharpen, color reduce, or add special effects to an image and save your    completed work in the same or  differing image format.">
+   <meta name="keywords" content="GraphicsMagick, Image Magick, Image Magic,    PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic,    WebMagick, Web Magic, visualization, image processing, software     development, simulation, image, software, AniMagick, Animagic,    Magick++">
    <link rel="StyleSheet" href="magick.css" type="text/css">
 </head>
 <body bgcolor="#FFFFFF" text="#000000" link="#0085c0" vlink="#800080" alink="#0085c0" >
@@ -21,37 +21,37 @@
 <td BGCOLOR="#52799E"><img SRC="../images/right_triangle.png" ALT=">" height=14
 width=15>
 <b><font face="Helvetica, Arial"><font color="#FFFFFF"><font size="+1">Sponsor
-Open ImageMagick</font></font></font></b></td>
+GraphicsMagick</font></font></font></b></td>
 </tr>
 </table>
 <dl>
 <dd>
-Open ImageMagick has been available to both free and commercial users since
+GraphicsMagick has been available to both free and commercial users since
 the early 1990's. In early 1993 it was one of the strongest free image
 processing packages available, but, unlike competing packages, it continues
-to be supported and enhanced. Today, Open ImageMagick is stronger and better
+to be supported and enhanced. Today, GraphicsMagick is stronger and better
 supported than ever.
-<p>Open ImageMagick has enjoyed considerable support from commercial users.
-Since Open ImageMagick is not restricted from use in commercial or proprietary
+<p>GraphicsMagick has enjoyed considerable support from commercial users.
+Since GraphicsMagick is not restricted from use in commercial or proprietary
 applications, it is used to support thousands of commercial web sites,
 is used by professional digital image and publishing shops, and is used
 as a component of commercial applications. Many of these commercial users
-have made contributions to Open ImageMagick, large and small, often anonymous,
+have made contributions to GraphicsMagick, large and small, often anonymous,
 but always appreciated.
-<p>Open ImageMagick Studio LLC is now looking for sponsorship from companies which
-use Open ImageMagick, or which would like to help support free software. If
-your company depends on Open ImageMagick, sponsoring Open ImageMagick development
+<p>GraphicsMagick Group LLC is now looking for sponsorship from companies which
+use GraphicsMagick, or which would like to help support free software. If
+your company depends on GraphicsMagick, sponsoring GraphicsMagick development
 is a way to express your gratitude and to contribute back to the development
-Open ImageMagick.
-<p>Open ImageMagick sponsorship can take many forms. The following are some
+GraphicsMagick.
+<p>GraphicsMagick sponsorship can take many forms. The following are some
 possibilities:
 <ul>
 <li>
-Provide assistance with legal matters related to Open ImageMagick Studio.</li>
+Provide assistance with legal matters related to GraphicsMagick Group.</li>
 
 <li>
 Support a high-bandwidth server to use as the main distribution
-point for Open ImageMagick.</li>
+point for GraphicsMagick.</li>
 
 <li>
 Provide technical writers to assist with the development of commercial-grade
@@ -59,22 +59,22 @@ technical documentation.</li>
 
 <li>
 Provide professional artists and web-site developers to help improve the
-Open ImageMagick web site.</li>
+GraphicsMagick web site.</li>
 
 <li>
 Donate needed hardware and software in order help us develop a better product.</li>
 
 <li>
-Donate source code to help improve Open ImageMagick where it is currently weak
+Donate source code to help improve GraphicsMagick where it is currently weak
 (such as support for ICC color profiles, or a GUI for a specific operating
 system).</li>
 
 <li>
-Produce Open ImageMagick CD-ROMs for distribution.</li>
+Produce GraphicsMagick CD-ROMs for distribution.</li>
 
 <li>
 Supply T-shirts, plush-toys, base-ball caps, and other collectibles to
-help promote Open ImageMagick.</li>
+help promote GraphicsMagick.</li>
 </ul>
 <p>
 Sponsorship may be anonymous, or public. We are willing to provide recognition
@@ -82,7 +82,7 @@ for significant sponsorships, and can provide links to the sponsor's web
 site.  For direct monetary contributions, send a check or money order in
 US funds to
 
-<pre>&nbsp;&nbsp;&nbsp; Open ImageMagick Studio LLC
+<pre>&nbsp;&nbsp;&nbsp; GraphicsMagick Group LLC
 &nbsp;&nbsp;&nbsp; P.O. Box 40
 &nbsp;&nbsp;&nbsp; Landenberg, PA&nbsp; 19350
 &nbsp;&nbsp;&nbsp; USA
@@ -95,10 +95,10 @@ US funds to
 <p>
 <hr>
 <p><a href="../ImageMagick.html"><img SRC="../images/home.png"
-ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
+ALT="GraphicsMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><a 
 href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
-ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
+ALT="GraphicsMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><font size="-2">
 Image manipulation software that works like magic.</font>
 </body>
